# rag-chatbot-backend-playground

./: .env.example  README.md  pyproject.toml
app/: main.py
app/config/: settings.py
app/models/: knowledge_bot_pipeline.py  models.py  rag_pipeline_state.py
app/services/: embeddings_manager.py  file_processor.py  knowledge_bot_app.py  knowledge_bot_tools.py  llm_manager.py  rag_pipeline.py  services_registry.py  vector_store_manager.py
notebook/: knowledge_bot_rag.ipynb
